# Static-Program-Analysis-tool

./: Readme.txt  random.c++
SPA/Code/: Contact.csv
SPA/Code/src/spa/: CMakeLists.txt
SPA/Code/src/spa/src/: Follow.cpp  Follow.h  InfixToPostfix.cpp  InfixToPostfix.h  Parent.cpp  Parent.h  Pattern.cpp  Query.cpp  QueryProcessor.cpp  QueryProcessor.h  Tokenizer.cpp
SPA/Code/tests/: assign.xml  constant.xml  i2_out.xml  print.xml  procedure.xml  stmt.xml  variable.xml
SPA/src/spa/: CMakeLists.txt
SPA/tests/: I1_assign.xml  I1_constant.xml  I1_print.xml  I1_procedure.xml  I1_read.xml  I1_statement.xml  I1_var.xml  Iter1_all_queries.txt  Iter1_assign_queries.txt  Iter1_print_queries.txt  Iter1_query_assign.txt  Iter1_query_procedure.txt  Iter1_query_read.txt  Iter1_query_statement.txt  Iter1_query_variable.txt  Iter1_source.txt  Iter1_statement_queries.txt  a.xml  amod.txt  aparent.txt  exp_query.txt  expression.txt  it2_source.txt  iter2_follows.txt  iter2_lecter_queries.txt  iter2_lecture_source.txt  iter2_query_followstar.txt  iter2_source.txt  iter2_source_teacher.txt  test.xml  while_query.txt
src/spa/src/: Database.cpp  Database.h  Modifies.cpp  Modifies.h  Pattern.h  Query.h  SourceProcessor.cpp  SourceProcessor.h  Use.cpp  Use.h  utils.cpp  (+1 more)
tests/: Iter1_all_source.txt  Iter1_constant_queries.txt  Iter1_output.xml  Iter1_read_queries.txt  Iter2_single_query.txt  afollow.txt  afollowstar.txt  apattern.txt  asource.txt  astar.txt  debug.txt  i2_output.xm  i2_output.xml  it2_queries.txt  iter2_query_normall.txt  iter2_s.txt  iter2_stmt_query.txt  read.xml
(+5 files in other folders)
